# rustvideoplatform

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  database_schema.sql
.sqlx/: query-00c601d9a42e62139a783401a1cdea6b29b9dd13c0d8d3ee99eeacd9d332307c.json  query-017bb4eaf8f9500c0094d655b004d91b4cfb2cd18de401d04310e71749949a88.json  query-0e365e2b705473107f9e258da61942827d3e5150c50c1731cdcf7c2e61c63a94.json  query-1b731179b250ff221a5ba3b2f54add01f2f85881ba9b6b9b143befd55672ad51.json  query-1bcb41a88506e26046adfa25fe7e88656956183f1f528e0b452f3128c68eabda.json  query-217898a67edb3b9c002238fa588d87bf291075984d83ae792cc21b10c937fb36.json  query-224a0f93f3658dac9cffea03ceccad6c48b496fca80ffc1b0543bf9890f419fd.json  query-2ba332e4b5791519da4acba3dda231a9e09d9917756ebe49307c5be452cd6b1f.json  query-3bd1053558d7473262056e99f640c975ecef401df3753ae5e76d80b6a266a2ea.json  query-4286fb3311e0aed9f39131c0dd0bd7e166191c51f192f8936ab9509d2c5fd72c.json  query-4a7b662faa7d8aa4da30e80f4e1180093816686701753bc6a9b663cb67880296.json  query-77c43971d5c3505c07a8e07bc91127b99f7e57fbe589b68c0476c12c65b9e173.json  query-7af3df57184a5d18c056b2c036068e79ec7dd4002c9e250d74a2c850dd06841c.json  query-883777f4fdcc239912c07f821f7f76fc3e8ced9c10c9985cf0b85967df8d88df.json  query-8af951b35e6085681bdbf79e3efb279822eb853591f364a175ce05034e56127b.json  query-8c12ac7c60680cada9310a8d73a0ed2a0b6c85db9ae0da0a83ac66b1684a873d.json  query-8cb5438ffec4f2de13bf16e633d58ac77df4f9f93330b90cccf1a4bb85bb5c5e.json  query-8ead12c3312bdd91f12cc962b19174783dbbcfc8e773ad9b65c242b41ee9657d.json  (+13 more)
src/: home.rs  (+16 more)
(+28 files in other folders)
